--- a/index.html
+++ b/index.html
@@ -1,114 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Shree Swamikrupa Agency and Transport</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  <meta charset="UTF-8" />
+  <title>Party Invoice Statistics</title>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
   <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to right, #f8f9fa, #e9ecef);
-      height: 100%;
-      overflow: hidden;
-    }
-    .container {
-      padding: 20px;
-      text-align: center;
+    body {
+      font-family: Arial, sans-serif;
+      margin: 30px;
+      background: #f9f9f9;
+      color: #222;
     }
     h1 {
-      font-size: 18px;
-      color: #2c3e50;
-      margin-bottom: 5px;
-    }
-    .date-time {
-      font-size: 13px;
-      color: #666;
-      margin-bottom: 25px;
-    }
-    .button {
-      display: block;
-      width: 100%;
-      max-width: 320px;
-      margin: 10px auto;
-      padding: 14px;
-      font-size: 16px;
-      background-color: #007BFF;
-      color: white;
-      border: none;
-      border-radius: 10px;
       text-align: center;
-      text-decoration: none;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.1);
-      transition: background-color 0.2s ease;
+      color: #0d47a1;
     }
-    .button:hover {
-      background-color: #0056b3;
+    #chart_div, #table_div {
+      margin: 20px auto;
+      max-width: 900px;
+      background: white;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
-    .footer {
-      font-size: 12px;
-      color: #aaa;
-      margin-top: 30px;
-    }
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-      display: none;
-    }
-    #backButton {
-      position: absolute;
-      top: 15px;
-      left: 15px;
-      background-color: #007BFF;
-      color: white;
-      border: none;
-      padding: 10px 14px;
-      border-radius: 8px;
-      font-size: 14px;
-      display: none;
-      z-index: 1000;
+    #table_div {
+      overflow-x: auto;
     }
   </style>
+
+  <script>
+    google.charts.load('current', {'packages':['corechart', 'table']});
+
+    // Your published sheet's gviz/tq URL (public & accessible)
+    const spreadsheetUrl = 'https://docs.google.com/spreadsheets/d/1P7MNu-3veP6ONaxDrY9Rvw3Ak5zq98sNeCpD4Uoqg8s/gviz/tq?gid=1157849883';
+
+    function drawVisualization() {
+      const query = new google.visualization.Query(spreadsheetUrl);
+
+      query.send(response => {
+        if (response.isError()) {
+          console.error('Error in query: ' + response.getMessage() + ' ' + response.getDetailedMessage());
+          document.getElementById('chart_div').innerText = 'Error loading data.';
+          document.getElementById('table_div').innerText = '';
+          return;
+        }
+
+        const data = response.getDataTable();
+
+        // Show full data table
+        const table = new google.visualization.Table(document.getElementById('table_div'));
+        table.draw(data, {showRowNumber: true, width: '100%', height: 'auto'});
+
+        // Aggregate Quantity (Bags) by Party Name:
+        const aggData = new google.visualization.DataTable();
+        aggData.addColumn('string', 'Party Name');
+        aggData.addColumn('number', 'Total Quantity (Bags)');
+
+        // Column indexes based on your headers:
+        // Party Name: column 7 (zero-based index)
+        // Quantity (Bags): column 14 (zero-based index)
+        const partyCol = 7;
+        const quantityCol = 14;
+
+        let partyQuantityMap = {};
+
+        for (let i = 0; i < data.getNumberOfRows(); i++) {
+          const party = data.getValue(i, partyCol);
+          let quantity = data.getValue(i, quantityCol);
+
+          quantity = Number(quantity);
+          if (!party || isNaN(quantity)) continue;
+
+          if (partyQuantityMap[party]) {
+            partyQuantityMap[party] += quantity;
+          } else {
+            partyQuantityMap[party] = quantity;
+          }
+        }
+
+        for (const party in partyQuantityMap) {
+          aggData.addRow([party, partyQuantityMap[party]]);
+        }
+
+        // Draw a column chart of quantity by party
+        const chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
+        chart.draw(aggData, {
+          title: 'Total Quantity (Bags) by Party Name',
+          legend: { position: 'none' },
+          hAxis: { title: 'Party Name', slantedText: true, slantedTextAngle: 45 },
+          vAxis: { title: 'Quantity (Bags)' },
+          height: 400,
+          width: 900,
+          colors: ['#1976d2']
+        });
+      });
+    }
+
+    google.charts.setOnLoadCallback(() => {
+      drawVisualization();
+      setInterval(drawVisualization, 60000); // refresh every 60 seconds
+    });
+  </script>
 </head>
 <body>
-  <div id="home" class="container">
-    <h1>Shree Swamikrupa Agency and Transport</h1>
-    <div class="date-time" id="datetime"></div>
-    <button class="button" onclick="openForm('https://docs.google.com/forms/d/e/1FAIpQLSeSFeGzHHY3HO3dLbB297dv-ZyVdjI68vQLuOn2CbIAngVAAA/viewform')">🧾 Create Invoice</button>
-    <button class="button" onclick="openForm('https://docs.google.com/forms/d/e/1FAIpQLSf6rtaBQjS6CxvqtfG7W9c-YNhkbpSseYioJbpweMPabt3p7Q/viewform')">📧 Send Email</button>
-    <button class="button" onclick="openForm('https://docs.google.com/forms/d/1LXAOYFFFc2Jgqqj4XNNvP_1djI3kMcSlQaAsRgGzQ5Q/viewform')">🔍 Check Last Invoice</button>
-    <button class="button" onclick="openForm('https://docs.google.com/forms/d/e/1FAIpQLSeWRt1qD_Hl39E9BVEgvN8wyXmC2wv5UK1mBlxScnY9tnPnPw/viewform')">👤 Add New Party</button>
-    <div class="footer">
-      &copy; <span id="year"></span> Shree Swamikrupa<br>App by Sanket
-    </div>
-  </div>
-  <button id="backButton" onclick="goHome()">⬅ Back</button>
-  <iframe id="iframeViewer"></iframe>
-  <script>
-    function updateDateTime() {
-      const now = new Date();
-      const options = { weekday: 'short', year: 'numeric', month: 'short', day: 'numeric' };
-      const timeString = now.toLocaleTimeString();
-      const dateString = now.toLocaleDateString(undefined, options);
-      document.getElementById('datetime').textContent = `${dateString} | ${timeString}`;
-    }
-    document.getElementById('year').textContent = new Date().getFullYear();
-    updateDateTime();
-    setInterval(updateDateTime, 1000);
-    function openForm(url) {
-      document.getElementById('home').style.display = 'none';
-      document.getElementById('iframeViewer').src = url;
-      document.getElementById('iframeViewer').style.display = 'block';
-      document.getElementById('backButton').style.display = 'inline-block';
-    }
-    function goHome() {
-      document.getElementById('iframeViewer').style.display = 'none';
-      document.getElementById('iframeViewer').src = '';
-      document.getElementById('home').style.display = 'block';
-      document.getElementById('backButton').style.display = 'none';
-    }
-  </script>
+  <h1>Party Invoice Statistics</h1>
+  <div id="chart_div"></div>
+  <div id="table_div"></div>
 </body>
 </html>
