--- a/index.html
+++ b/index.html
@@ -49,7 +49,19 @@
       border-radius: 10px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
+  
+    /* 👇 Wrap header and cell text */
+    .google-visualization-table-th {
+      white-space: normal !important;
+      word-break: break-word !important;
+      text-align: left;
+    }
+    .google-visualization-table-td {
+      white-space: normal !important;
+      word-break: break-word !important;
+    }
   </style>
+
   <script>
     google.charts.load('current', {packages:['corechart','table']});
 
