--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
     .google-visualization-table-td {
       white-space: normal !important;
       word-break: break-word !important;
-      max-width: 200px;
+      max-width: 10ch; /* roughly 10 characters wide */
+      overflow-wrap: break-word;
     }
 
     /* Responsive tweaks */
