--- a/index.html
+++ b/index.html
@@ -64,6 +64,17 @@
       overflow-wrap: break-word;
     }
 
+     .google-visualization-table-table thead th {
+      position: sticky;
+      top: 0;
+      background: #fff;
+      z-index: 2;
+    }
+    #table_div {
+      max-height: 400px;
+      overflow-y: auto;
+    }
+    
     /* Responsive tweaks */
     @media (max-width: 600px) {
       .card h2 {
