--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
         min-width: 600px; /* or more if needed */
       }
     }
+    .google-visualization-table-table th,
+    .google-visualization-table-table td {
+      white-space: normal !important;
+      word-break: break-word;
+    }
     
   </style>
 
